k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"certmanager.k8s.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"nginx"},"name":"wawan-pro","namespace":"wawan-pro-blog"},"spec":{"rules":[{"host":"wawan.pro","http":{"paths":[{"backend":{"serviceName":"hugo","servicePort":80}}]}}],"tls":[{"hosts":["wawan.pro","www.wawan.pro"],"secretName":"wawan-pro-tls"}]}}
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2020-04-02T23:25:37Z"
  generation: 2
  name: wawan-pro
  namespace: wawan-pro-blog
  resourceVersion: "16657852"
  selfLink: /apis/extensions/v1beta1/namespaces/wawan-pro-blog/ingresses/wawan-pro
  uid: 95ccfa8f-0a1d-4e03-96e3-3d60b4340156
spec:
  rules:
  - host: wawan.pro
    http:
      paths:
      - backend:
          serviceName: hugo
          servicePort: 80
  tls:
  - hosts:
    - wawan.pro
    - www.wawan.pro
    secretName: wawan-pro-tls
status:
  loadBalancer:
    ingress:
    - hostname: 3a-tour.ru
